--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li><a href="./About/Contact.html">Contact me</a></li>
             <li><a href="./About/Hobbies.html">Hobbies</a></li>
         </ul>
-        <p>>©Tsiolakis. All rights reserved.</p>
+        <p>©Tsiolakis. All rights reserved.</p>
     </footer>
 </body>
 </html>
